--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.7.14",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@mui/x-data-grid": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.5",
