--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.12.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "mongodb": "^5.4.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.4.0",
+    "mongoose": "^7.1.1"
   }
 }
