--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.4.0",
-    "mongoose": "^7.1.1"
+    "mongoose": "^7.1.1",
+    "nodemailer": "^6.9.3"
   }
 }
