--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@wry/context": "^0.7.3",
     "@wry/equality": "^0.5.6",
     "crypto-js": "^4.1.1",
+    "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
